main/default/objects/Cocktail__c/Cocktail__c.object-meta.xml
<CustomObject>
    <label>Cocktail</label>
    <nameField>
        <label>Cocktail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cocktails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>