main/default/objects/Cocktail__c/fields/Layered__c.field-meta.xml
<CustomField>
    <fullName>Layered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Layered</label>
    <type>Checkbox</type>
</CustomField>