main/default/objects/Cocktail__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>&quot;/cocktails/&quot; &amp; SUBSTITUTE(Name, &quot; &quot;, &quot;&quot;) &amp; &quot;.jpg&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>